--- a/resources/assets/sass/frontend/template/nizawa/style.scss
+++ b/resources/assets/sass/frontend/template/nizawa/style.scss
@@ -3,6 +3,10 @@
     font-family: Microsoft JhengHei;
 }
 
+.slick-dotted.slick-slider {
+    margin-bottom: 50px;
+}
+
 ul {
     margin: 0;
     padding: 0;
