--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -460,12 +460,17 @@
             background: url('/img/icon/burger-open.svg');
         }
     }
-    .header-logo {
+    a.header-logo {
         position: absolute;
-        height: 60px;
+        // height: 60px;
+        width: 250px;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        
+        img {
+            width: 100%;
+        }
     }
 }
 
