--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -1756,7 +1756,7 @@
                         margin: 0;
                     }
                 }                
-                &:hover {
+                &:hover, &.active {
                     background-color: $main-color;
                 }
             }
