--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -1412,7 +1412,7 @@
                     &::after {
                         position: absolute;
                         top: 18px;
-                        right: 10px;
+                        left: 120px;
                         content: '\5FC5\586B';
                         border: red thin solid;
                         padding: 1px 7px;
