--- a/resources/assets/sass/frontend/template/nizawa/style.scss
+++ b/resources/assets/sass/frontend/template/nizawa/style.scss
@@ -1,6 +1,6 @@
 * {
     position: relative;
-    font-family: Microsoft JhengHei;
+    font-family: 'Nunito', Microsoft JhengHei;
 }
 
 .slick-dotted.slick-slider {
