--- a/resources/assets/sass/frontend/style.scss
+++ b/resources/assets/sass/frontend/style.scss
@@ -30,6 +30,10 @@ input::-webkit-inner-spin-button {
     }
 }
 
+.site-content .about-content .about-text ul.about-location-tab li.nav-item a.nav-link {
+    border: none;
+}
+
 .fixed-button-group {
     position: fixed;
     right: 35px;
