--- a/resources/assets/sass/frontend/style.scss
+++ b/resources/assets/sass/frontend/style.scss
@@ -4,7 +4,7 @@
 /***********************/
 body {
     background: $body-bg;
-    font-family: 'Nunito', Microsoft JhengHei;
+    font-family: Microsoft JhengHei;
     overflow-x: hidden;
 }
 
@@ -26,7 +26,7 @@ input::-webkit-inner-spin-button {
 #tree {
     span {
         font-size: 16px;
-        font-family: 'Nunito', Microsoft JhengHei;
+        font-family: Microsoft JhengHei;
     }
 }
 
