--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -2525,6 +2525,10 @@
     
 }
 
+.careers-container {
+    background-color: #000;
+}
+
 @media (max-width: 579px) {
     .mobile-site-header .header-logo {
         height: 40px;
