--- a/resources/assets/sass/frontend/template/nizawa/style.scss
+++ b/resources/assets/sass/frontend/template/nizawa/style.scss
@@ -16,6 +16,15 @@ ul {
     }
 }
 
+.link-mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    text-decoration: none;
+}
+
 .pagination-section {
 
     .pagination {
