--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,6 +10,9 @@
 @import "~gentelella/src/scss/custom.scss";
 @import "~gentelella/src/scss/daterangepicker.scss";
 
+// GrapeJs
+@import "~grapesjs/dist/css/grapes.min.css";
+ 
 // 管理者全域樣式
 @import "backend/style";
 // 商品管理頁面樣式
