--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,7 +11,7 @@
 @import "~gentelella/src/scss/daterangepicker.scss";
 
 // GrapeJs
-@import "~grapesjs/dist/css/grapes.min.css";
+// @import "~grapesjs/dist/css/grapes.min.css";
  
 // 管理者全域樣式
 @import "backend/style";
