page builder methods

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,6 +12,7 @@
 
 // GrapeJs
 // @import "~grapesjs/dist/css/grapes.min.css";
+// @import "~grapesjs/src/styles/scss/main.scss";
  
 // 管理者全域樣式
 @import "backend/style";
