--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -2166,6 +2166,26 @@
         }
         #location-tab-content {
             margin-top: 50px;
+
+            .tab-pane {
+
+                a {
+                    position: relative;
+                    display: inline-block;
+                    padding-bottom: 75%;
+                    width: 100%;
+
+                    img {
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        width: auto;
+                        max-width: 90%;
+                        max-height: 90%;
+                        transform: translate(-50%, -50%);
+                    }
+                }
+            }
         }
         .spec-section {
             color: #FFF;
