--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -296,6 +296,317 @@
     
 }
 
+//colors
+$color_iron_approx: #d8d8d8;
+$color_red_ribbon_approx: #e50032;
+$color_alto_approx: #dcdcdc;
+$color_silver_chalice_approx: #afafaf;
+$white: #fff;
+$color_fuscous_gray_approx: #555;
+$color_quill_gray_approx: #d2d2d2;
+
+//fonts
+$font_0: icomoon;
+
+//@extend-elements
+//original selectors
+//.wp.history .content .years .slider .slider-nav .dot.slick-current:before, .wp.history .content .years .slider .slider-nav .dot[aria-hidden=true]:before
+%extend_1 {
+	width: 100%;
+	background: $color_red_ribbon_approx;
+	//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+	transition: width .3s ease-in-out, background-color .3s ease-in-out;
+}
+
+
+.wp {
+	&.history .content {
+		h3 {
+			margin-bottom: 30px;
+		}
+		.slider-for {
+			margin-top: 100px;
+			padding: 0 96px;
+		}
+		.years {
+			.slider {
+				padding: 0 125px;
+				.slider-nav {
+					position: relative;
+					padding: 0 200px 0 250px;
+					&:before {
+						content: "";
+						position: absolute;
+						width: 100%;
+						height: 2px;
+						background-color: $color_iron_approx;
+						bottom: 0;
+						top: 60px;
+						left: 0;
+						margin: auto;
+					}
+					&:after {
+						content: "";
+						position: absolute;
+						width: 250px;
+						height: 2px;
+						left: 0;
+						bottom: 0;
+						top: 60px;
+						margin: auto;
+						background-color: $color_red_ribbon_approx;
+					}
+					.slick-arrow {
+						top: 80px;
+						width: 45px;
+						height: 45px;
+						&:before {
+							font-family: $font_0;
+							border: 2px solid $color_alto_approx;
+							//Instead of the line below you could use @include border-radius($radius, $vertical-radius)
+							border-radius: 50%;
+							display: block;
+							width: 100%;
+							height: 100%;
+							line-height: 43px;
+							text-align: center;
+							color: $color_silver_chalice_approx;
+							opacity: 1;
+						}
+						&.slick-prev {
+							left: -70px;
+							&:before {
+								content: "\e912";
+							}
+						}
+						&.slick-next {
+							right: -70px;
+							&:before {
+								content: "\e913";
+							}
+						}
+						&:hover:before {
+							background: $color_red_ribbon_approx;
+							border: 2px solid $color_red_ribbon_approx;
+							color: $white;
+							//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+							transition: color .3s ease-in-out, border-color .3s ease-in-out, background-color .3s ease-in-out;
+						}
+					}
+					.dot {
+						position: relative;
+						padding: 40px 0;
+						p {
+							position: relative;
+							top: 0;
+							left: -12px;
+							color: $color_fuscous_gray_approx;
+						}
+						.circle {
+							position: absolute;
+							display: block;
+							top: 60px;
+							bottom: 0;
+							left: 0;
+							margin: auto;
+							width: 15px;
+							height: 15px;
+							border: 1px solid $color_quill_gray_approx;
+							//Instead of the line below you could use @include border-radius($radius, $vertical-radius)
+							border-radius: 50%;
+							background: $white;
+							//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+							transition: border-color .3s ease-in-out, background-color .3s ease-in-out;
+							z-index: 10;
+						}
+						&:before {
+							content: "";
+							position: absolute;
+							left: -100%;
+							top: 60px;
+							bottom: 0;
+							margin: auto;
+							height: 2px;
+							width: 0;
+							overflow: hidden;
+							//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+							transition: width .3s ease-in-out .3s, background-color .3s ease-in-out .3s;
+						}
+						&.slick-current {
+							.circle {
+								//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+								transition: border-color .3s ease-in-out .3s, background-color .3s ease-in-out .3s;
+								border-color: $color_red_ribbon_approx;
+								background: $color_red_ribbon_approx;
+							}
+							&:before {
+								@extend %extend_1;
+							}
+						}
+					}
+					.dot[aria-hidden=true] {
+						.circle {
+							//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+							transition: border-color .3s ease-in-out .3s, background-color .3s ease-in-out .3s;
+							border-color: $color_red_ribbon_approx;
+						}
+						&:before {
+							@extend %extend_1;
+						}
+						&:not(.slick-active):before {
+							background-color: transparent;
+						}
+					}
+					.slick-list .slick-track {
+						padding: 0 15px;
+					}
+				}
+			}
+			.slider-for {
+				h4 {
+					font-size: 48px;
+					padding-bottom: 25px;
+				}
+				ul {
+					position: relative;
+					margin-left: 20px;
+					li {
+						line-height: 36px;
+						letter-spacing: 1px;
+						font-size: 16px;
+					}
+				}
+				.right {
+					text-align: right;
+					.pic {
+						display: inline-block;
+					}
+				}
+			}
+		}
+	}
+	&.founder .content .sectionbox {
+		&.first {
+			p {
+				line-height: 30px;
+			}
+			.pic {
+				text-align: center;
+			}
+		}
+		&.second .pic {
+			text-align: center;
+		}
+	}
+	&.awards .content .sections .pic {
+		text-align: center;
+	}
+}
+.max-sm-size .wp {
+	&.history .content {
+		.slider-for {
+			margin-top: 75px;
+		}
+		.years {
+			.slider-for {
+				h4 {
+					font-size: 30px;
+				}
+				ul li {
+					line-height: 30px;
+				}
+			}
+			.slider .slider-nav {
+				padding-left: 50px;
+				padding-right: 25px;
+				&:after {
+					width: 65px;
+				}
+			}
+		}
+		> .container {
+			padding: 0 20px;
+		}
+	}
+	&.founder .content .sectionbox {
+		&.first .right .title {
+			text-align: center;
+		}
+		&.second .pic p {
+			text-align: center;
+		}
+	}
+}
+.max-xs-size .wp.history .content {
+	.slider-for {
+		margin-top: 50px;
+	}
+	.years .slider {
+		padding: 0 30px;
+		.slider-nav {
+			padding-left: 20px;
+			padding-right: 0;
+			&:after {
+				width: 20px;
+			}
+			.slick-arrow {
+				top: calc(50% +29px);
+				&.slick-prev {
+					left: -45px;
+				}
+				&.slick-next {
+					right: -45px;
+				}
+			}
+			.dot {
+				padding: 10px 0 40px;
+			}
+		}
+	}
+}
+.max-md-size .wp.history .content .years {
+	.slider {
+		padding: 0 70px;
+		.slider-nav {
+			padding-left: 105px;
+			padding-right: 70px;
+			&:after {
+				width: 105px;
+			}
+		}
+	}
+	.slider-for {
+		padding: 0 15px;
+	}
+}
+.max-hd-size .wp.history .content .years .slider .slider-nav {
+	padding-left: 225px;
+	padding-right: 150px;
+	&:after {
+		width: 225px;
+	}
+}
+.max-bg-size .wp.history .content .years .slider .slider-nav {
+	padding-left: 150px;
+	padding-right: 100px;
+	&:after {
+		width: 150px;
+	}
+}
+.max-lg-size .wp.history .content .years {
+	.slider .slider-nav {
+		padding-left: 135px;
+		padding-right: 90px;
+		&:after {
+			width: 135px;
+		}
+	}
+	.slider-for .right {
+		text-align: center;
+		padding-top: 20px;
+	}
+}
+
 
 .site-mega-menu-overlay {
     position: fixed;
