--- a/resources/assets/sass/frontend-style.scss
+++ b/resources/assets/sass/frontend-style.scss
@@ -9,7 +9,7 @@
 
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
-
+@import '~element-ui/lib/theme-chalk/index.css';
 // Global styles
 @import "frontend/style";
 
@@ -41,7 +41,7 @@
 // Template
 
 // Index
-@import "frontend/template/nizawa/style";
+@import "frontend/template/grapeking/style";
 
 // Index
-@import "frontend/template/nizawa/index";
+@import "frontend/template/grapeking/index";
