--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -326,14 +326,14 @@ $font_0: icomoon;
 		}
 		.slider-for {
 			margin-top: 100px;
-			padding: 0 96px;
+			padding: 0 40px;
 		}
 		.years {
 			.slider {
-				padding: 0 125px;
+				padding: 0 90px;
 				.slider-nav {
 					position: relative;
-					padding: 0 200px 0 250px;
+					padding: 0 120px 0 150px;
 					&:before {
 						content: "";
 						position: absolute;
@@ -348,7 +348,7 @@ $font_0: icomoon;
 					&:after {
 						content: "";
 						position: absolute;
-						width: 250px;
+						width: 150px;
 						height: 2px;
 						left: 0;
 						bottom: 0;
@@ -357,7 +357,7 @@ $font_0: icomoon;
 						background-color: $color_red_ribbon_approx;
 					}
 					.slick-arrow {
-						top: 80px;
+						top: 89px;
 						width: 45px;
 						height: 45px;
 						&:before {
@@ -376,13 +376,13 @@ $font_0: icomoon;
 						&.slick-prev {
 							left: -70px;
 							&:before {
-								content: "\e912";
+								// content: "\E606";
 							}
 						}
 						&.slick-next {
 							right: -70px;
 							&:before {
-								content: "\e913";
+								// content: "\f007";
 							}
 						}
 						&:hover:before {
@@ -443,7 +443,35 @@ $font_0: icomoon;
 								@extend %extend_1;
 							}
 						}
-					}
+                    }
+                    .slick-slide {
+                        &:before {
+                            content: "";
+                            position: absolute;
+                            left: -100%;
+                            top: 60px;
+                            bottom: 0;
+                            margin: auto;
+                            height: 2px;
+                            width: 0;
+                            overflow: hidden;
+                            //Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+                            transition: width .2s ease-in-out .2s, background-color .2s ease-in-out .2s;
+                        }
+
+                        &.slick-current {
+                            .circle {
+                                //Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+                                transition: border-color .3s ease-in-out .3s, background-color .3s ease-in-out .3s;
+                                border-color: $color_red_ribbon_approx;
+                                background: $color_red_ribbon_approx;
+                            }
+                            &:before {
+                                width: 100%;
+                                background: #e50032;
+                            }
+                        }
+                    }                    
 					.dot[aria-hidden=true] {
 						.circle {
 							//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
@@ -473,7 +501,8 @@ $font_0: icomoon;
 					li {
 						line-height: 36px;
 						letter-spacing: 1px;
-						font-size: 16px;
+                        font-size: 16px;
+                        list-style: disc;
 					}
 				}
 				.right {
@@ -1769,6 +1798,7 @@ $font_0: icomoon;
             width: 100%;
             max-width: 270px;
             margin: 0 auto;
+            margin-bottom: 30px;
 
             h3.about-section-title {
                 font-size: 1.5rem;
