--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -1671,6 +1671,7 @@ a.toggle-locale-btn {
         background-position: center;
         height: 520px;
         text-align: center;
+        margin-bottom: 50px;
 
         h2 {
             padding: 5px;
@@ -1694,31 +1695,43 @@ a.toggle-locale-btn {
         }
         .site-thumbnail-section {
             width: 100%;
+            background-color: #efefef;
+            margin-bottom: -50px;
 
             .site-thumbnail-container {
                 text-align: left;
-                background-color: rgba($color: #000000, $alpha: 0.6);
-                // margin-bottom: -8px;
+                // background-color: rgba($color: #000000, $alpha: 0.6);
                 width: 100%;
-                max-width: 600px;
+                // max-width: 600px;
                 border-top-left-radius: 10px;
                 border-top-right-radius: 10px;
-                padding: 20px 40px;
+                // padding: 20px 40px;
 
                 h2 {
+                    display: none;
                     padding: 0;
                     font-size: 32px;
                 }
                 ul.site-thumbnail {
-                    padding-bottom: 10px;
+                    padding-top: 15px;
+                    padding-bottom: 15px;
                     li {
                         display: inline-block;
-                        color: #fff;
-                        font-size: 15px;
+                        // color: #fff;
+                        font-size: 18px;
+                        font-weight: 700;
 
                         a {
-                            color: #fff;
+                            // color: #fff;
                             text-decoration: none;
+                        }
+
+                        &:last-child {
+                            color: $custom_main;
+
+                            a {
+                                color: $custom_main;
+                            }
                         }
                     }
                 }
