--- a/resources/assets/sass/frontend/template/grapeking/style.scss
+++ b/resources/assets/sass/frontend/template/grapeking/style.scss
@@ -1,6 +1,17 @@
+@import '../../../animate.scss';
+
 * {
     position: relative;
     font-family: Microsoft JhengHei;
+}
+
+%force-center-right {
+    display: -webkit-flex;
+    display:         flex;
+    -webkit-align-items: center;
+            align-items: center;
+    -webkit-justify-content: flex-end;
+            justify-content: flex-end;
 }
 
 .slick-dotted.slick-slider {
@@ -14,6 +25,28 @@ ul {
     li {
         list-style: none;
     }
+}
+
+.cookies-bar {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba($color: #000000, $alpha: .8);
+    color: #fff;
+    z-index: 15;
+    display: none;
+
+    .btn-sec {
+        @extend %force-center-right;
+        .btn.cookies-btn {
+            padding-left: 30px;
+            padding-right: 30px;
+            background-color: $custom_main;
+            color: #fff;
+        }
+    }
+    
 }
 
 .link-mask {
