--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -103,6 +103,33 @@
     }
 }
 
+
+
+.global-loaction {
+    @extend %force-center-right;
+    .flat-box {
+        position: absolute;
+        top: 40%;
+        transform: translateY(-50%);
+        width: 100%;
+        z-index: 1;
+    }
+    .location-map {
+        width: 60%;
+        .img-container {
+            width: 100%;
+            padding-bottom: 58.41%;
+            img {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+        }
+    }
+}
+
 .site-header {
     position: fixed;
     top: 0;
@@ -2825,6 +2852,39 @@ a.toggle-locale-btn {
 }
 
 @media (max-width: 1170px) {
+    .global-loaction {
+        display: inline-block;
+        // @extend %force-center-right;
+        .flat-box {
+            position: relative;
+            top: 0;
+            transform: none;
+            margin-top: 50px;
+            .about-content {
+                flex: 0 0 100%;
+                max-width: 100%;
+            }
+            // position: absolute;
+            // top: 40%;
+            // transform: translateY(-50%);
+            // width: 100%;
+            // z-index: 1;
+        }
+        .location-map {
+            width: 100%;
+            // .img-container {
+            //     width: 100%;
+            //     padding-bottom: 58.41%;
+            //     img {
+            //         width: 100%;
+            //         height: 100%;
+            //         position: absolute;
+            //         top: 0;
+            //         left: 0;
+            //     }
+            // }
+        }
+    }
     .site-header {
         display: none;
     }
