--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -2682,11 +2682,12 @@ a.toggle-locale-btn {
                 }
                 .site-info {
                     padding: 20px;
+                    padding-left: 5px;
                     font-size: 15px;
 
                     .footer-logo {
                         width: 100%;
-                        max-width: 300px;
+                        max-width: 250px;
                         // text-align: center;
 
                         img {
