--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -1745,7 +1745,7 @@ a.toggle-locale-btn {
                     li {
                         display: inline-block;
                         // color: #fff;
-                        font-size: 18px;
+                        font-size: 15px;
                         font-weight: 700;
 
                         a {
@@ -2820,6 +2820,7 @@ a.toggle-locale-btn {
     }
     .info {
         padding: 15px 20px;
+        padding-left: 10px;
         color: #666;
 
         a {
