--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -1,5 +1,14 @@
 @import '../../../animate.scss';
 
+@mixin force-center {
+    display: -webkit-flex;
+    display:         flex;
+    -webkit-align-items: center;
+            align-items: center;
+    -webkit-justify-content: center;
+            justify-content: center;
+}
+
 %footer-logo-border-line {
     position: absolute;
     content: '';
@@ -10,12 +19,7 @@
     background: rgba($color: #fff, $alpha: 0.5);
 }
 %force-center {
-    display: -webkit-flex;
-    display:         flex;
-    -webkit-align-items: center;
-            align-items: center;
-    -webkit-justify-content: center;
-            justify-content: center;
+    @include force-center;
 }
 %force-center-right {
     display: -webkit-flex;
@@ -1698,7 +1702,7 @@ a.toggle-locale-btn {
         background-position: center;
         height: 520px;
         text-align: center;
-        margin-bottom: 50px;
+        margin-bottom: 40px;
 
         h2 {
             padding: 5px;
@@ -1734,7 +1738,7 @@ a.toggle-locale-btn {
                     text-shadow: 2px 2px 12px rgba($color: #000000, $alpha: .8);
                     text-align: left;
                     font-weight: 600;
-                    font-size: 2.4rem;
+                    font-size: 2.2rem;
                     padding: 0;
                     margin: 0;
                     line-height: 28px;
@@ -1744,7 +1748,9 @@ a.toggle-locale-btn {
         .site-thumbnail-section {
             width: 100%;
             background-color: #efefef;
-            margin-bottom: -50px;
+            margin-bottom: -40px;
+            position: absolute;
+            bottom: 0;
 
             .site-thumbnail-container {
                 text-align: left;
@@ -1761,8 +1767,8 @@ a.toggle-locale-btn {
                     font-size: 32px;
                 }
                 ul.site-thumbnail {
-                    padding-top: 15px;
-                    padding-bottom: 15px;
+                    padding-top: 10px;
+                    padding-bottom: 10px;
                     li {
                         display: inline-block;
                         // color: #fff;
@@ -2682,6 +2688,104 @@ a.toggle-locale-btn {
     }
 
     
+    .production-content {
+        margin-top: 120px;
+        margin-bottom: 80px;
+        background-image: url('/img/business/production_flow_bg.png');
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: right;
+
+        .production-left-side {
+            .production-image {
+                width: 100%;
+                margin: 30px auto;
+            }
+        }
+        .production-right-side {
+            @extend %force-center-right;
+            font-size: 2.3rem;
+            font-weight: 600;
+        }
+    }
+    .production-tabs {
+
+        ul.nav-tabs {
+            border: none;
+            padding-left: 25px;
+
+            li.nav-item {
+
+                a.nav-link {
+                    overflow: hidden;
+                    color: #666;
+                    padding: 10px 25px;
+
+                    &.active {
+                        color: #fff;
+
+                        &.tablet {
+                            background-color: #E30032;
+                        }
+                        &.granule {
+                            background-color: #E58A2D;
+                        }
+                        &.aluminum {
+                            background-color: #979797;
+                        }
+                        &.capsule {
+                            background-color: #96B838;
+                        }
+                        &.glass_bottle {
+                            background-color: #198DB9;
+                        }
+                    }
+                }
+            }
+        }
+        .tab-content {
+
+            .tab-pane {
+
+                [class*='col-md-'] {
+                    padding: 0;
+
+                    &.image {
+
+                        img {
+                            width: 100%;
+                        }
+                    }
+                    &.label {
+                        @extend %force-center-right;
+                        padding: 20px 15px 20px 30px;
+                        
+                        img {
+                            width: 100%;
+                        }
+                        &.tablet {
+                            background-color: #E30032;
+                        }
+                        &.granule {
+                            background-color: #E58A2D;
+                        }
+                        &.aluminum {
+                            background-color: #979797;
+                        }
+                        &.capsule {
+                            background-color: #96B838;
+                        }
+                        &.glass_bottle {
+                            background-color: #198DB9;
+                        }
+                    }
+                }                
+                &.active {
+
+                }
+            }
+        }
+    }
 }
 
 .site-footer {
@@ -2927,6 +3031,20 @@ a.toggle-locale-btn {
     .content article.description .row .box .row .right {
         display: none;
     }
+    .site-content .sub-page-banner {
+        height: initial;
+        padding-bottom: 31.25%;
+    }
+    .site-content .sub-page-banner .site-page-label {
+        top: 50%;
+    }
+    .site-content .production-tabs ul.nav-tabs {
+        @include force-center;
+        padding: 0;
+    }
+    .site-content .production-tabs ul.nav-tabs li.nav-item a.nav-link.active {
+        border-radius: 3px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -2961,7 +3079,7 @@ a.toggle-locale-btn {
             transform: scale(0.5) translate(-50%, -50%);
         }
         .sub-page-banner {
-            height: 300px;
+            // height: 300px;
         }
     }
     
@@ -2994,11 +3112,11 @@ a.toggle-locale-btn {
     }
 
     .mobile-to-show {
-        display: block;
+        display: block !important;
     }
 
     .mobile-to-hide {
-        display: none;
+        display: none !important;
     }
 
     .mobile-to-center {
@@ -3457,7 +3575,7 @@ a.toggle-locale-btn {
     }
     .site-content {
         .sub-page-banner {
-            height: 235px;
+            // height: 235px;
 
             .site-thumbnail-section {
 
@@ -3465,16 +3583,19 @@ a.toggle-locale-btn {
                     width: calc(100% + 30px);
                     margin-left: -15px;
                     border-radius: 0;
-                    padding: 20px;
+                    padding: 1px 20px;
                 
                     h2 {
                         display: none;
                     }
                     ul.site-thumbnail {
-                        padding-bottom: 0;
+                        // padding-bottom: 0;
                     }
                 }
             }
         }
+    }
+    .site-content .sub-page-banner .site-page-label .container-label h2 {
+        font-size: 1.5rem;
     }
 }
