--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -2706,6 +2706,7 @@ a.toggle-locale-btn {
             @extend %force-center-right;
             font-size: 2.3rem;
             font-weight: 600;
+            text-shadow: 0px 0px 1px;
         }
     }
     .production-tabs {
@@ -2760,8 +2761,15 @@ a.toggle-locale-btn {
                         @extend %force-center-right;
                         padding: 20px 15px 20px 30px;
                         
-                        img {
-                            width: 100%;
+                        svg.prod-material, img {
+                            width: 80%;
+                        }
+                        svg.thumb {
+                            position: absolute;
+                            top: 50%;
+                            left: 30px;
+                            transform: translateY(-50%);
+                            height: 85%;
                         }
                         &.tablet {
                             background-color: #E30032;
@@ -3057,6 +3065,28 @@ a.toggle-locale-btn {
             float: initial;
         }
         padding: 15px 15px;
+    }
+    
+    .site-content .production-tabs ul.nav-tabs {
+        display: block;
+        margin-bottom: -8px;
+        overflow: auto;
+        white-space: nowrap;
+
+        li.nav-item {
+            display: inline-block;
+        }
+    }
+
+    .site-content .production-tabs .tab-content .tab-pane [class*='col-md-'].label {
+        padding-top: 9%;
+        padding-bottom: 9%;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    .site-content .production-tabs .tab-content .tab-pane [class*='col-md-'].label svg.prod-material, .site-content .production-tabs .tab-content .tab-pane [class*='col-md-'].label img {
+        width: 100%;
     }
     
     .site-copyright .info {
