--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -2715,6 +2715,23 @@ a.toggle-locale-btn {
             border: none;
             padding-left: 25px;
 
+            // &::after, &::before {
+            //     content: '...';
+            //     position: absolute;
+            //     top: 0;
+            //     bottom: 0;
+            //     width: auto;
+            //     padding: 0 10px;
+            //     line-height: 36px;
+            // }
+            // &::after {
+            //     right: 0;
+            //     background-image: linear-gradient(to right, transparent , white);
+            // }
+            // &::before {
+            //     left: 0;
+            //     background-image: linear-gradient(to left, transparent , white);
+            // }
             li.nav-item {
 
                 a.nav-link {
@@ -3091,6 +3108,10 @@ a.toggle-locale-btn {
     
     .site-copyright .info {
         text-align: center !important;
+    }
+
+    .nav-tabs .nav-link:focus, .nav-tabs .nav-link {
+        border-color: #e9ecef #e9ecef #dee2e6;
     }
     
     .license-container {
