--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -2691,7 +2691,7 @@ a.toggle-locale-btn {
     .production-content {
         margin-top: 120px;
         margin-bottom: 80px;
-        background-image: url('/img/business/production_flow_bg.png');
+        background-image: url('/img/business/production_flow_bg.jpg');
         background-repeat: no-repeat;
         background-size: contain;
         background-position: right;
