--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -2714,10 +2714,16 @@ a.toggle-locale-btn {
             }
         }
         .production-right-side {
-            @extend %force-center-right;
+            // @extend %force-center-right;
             font-size: 2.3rem;
             font-weight: 600;
             text-shadow: 0px 0px 1px;
+
+            .factory-text {
+                position: absolute;
+                top: 11%;
+                left: -10%;
+            }
         }
     }
     .production-tabs {
