--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -8,6 +8,14 @@
     -webkit-justify-content: center;
             justify-content: center;
 }
+@mixin force-center-left {
+    display: -webkit-flex;
+    display:         flex;
+    -webkit-align-items: center;
+            align-items: center;
+    -webkit-justify-content: flex-start;
+            justify-content: flex-start;
+}
 
 %footer-logo-border-line {
     position: absolute;
@@ -30,12 +38,7 @@
             justify-content: flex-end;
 }
 %force-center-left {
-    display: -webkit-flex;
-    display:         flex;
-    -webkit-align-items: center;
-            align-items: center;
-    -webkit-justify-content: flex-start;
-            justify-content: flex-start;
+    @include force-center-left;
 }
 %force-bottom-center {
     display: -webkit-flex;
@@ -82,6 +85,10 @@
     @extend %force-center;
 }
 
+.force-center-left {
+    @include force-center-left;
+}
+
 .mobile-to-left {
     text-align: right;
 }
@@ -106,6 +113,121 @@
         }
     }
 }
+
+/* The actual timeline (the vertical ruler) */
+.timeline::before {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: #555;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+
+/* Container-timeline around content */
+.container-timeline {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+
+    /* The actual content */
+    .content-timeline {
+        padding: 0px 30px 20px;
+        background-color: white;
+        position: relative;
+        border-radius: 6px;
+
+        h2 {
+            margin-bottom: 20px;
+            color: $main-color;
+            font-size: 50px;
+            font-weight: 700;
+        }
+        .feature-image {
+            width: 100%;
+        }
+        &::before {
+            content: '';
+            position: absolute;
+            background: #555;
+            top: 68px;
+            height: 2px;
+            width: 70px;
+        }
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        width: 25px;
+        height: 25px;
+        right: -12.5px;
+        background-color: white;
+        border: 2px solid #555;
+        top: 66px;
+        border-radius: 50%;
+        z-index: 1;
+    }
+
+    &:nth-child(odd) {
+        left: 0;
+        padding-left: 0px;
+        padding-right: 60px;
+        
+
+        &::before {
+            content: " ";
+            height: 0;
+            position: absolute;
+            top: 22px;
+            width: 0;
+            z-index: 1;
+            right: 30px;
+            border: medium solid white;
+            border-width: 10px 0 10px 10px;
+            border-color: transparent transparent transparent white;
+        }
+        .content-timeline {
+            h2 {
+                text-align: right;
+            }
+            &::before {
+                right: -50px;
+            }
+        }
+    }
+
+    &:nth-child(even) {
+        left: 50%;
+        padding-left: 60px;
+        padding-right: 0px;
+    
+        &::before {
+            content: " ";
+            height: 0;
+            position: absolute;
+            top: 22px;
+            width: 0;
+            z-index: 1;
+            left: 30px;
+            border: medium solid white;
+            border-width: 10px 10px 10px 0;
+            border-color: transparent white transparent transparent;
+        }
+        &::after {
+            left: -12.5px;
+        }
+        .content-timeline {
+            &::before {
+                left: -50px;
+            }
+        }
+    }
+}
+
 
 
 
@@ -3134,6 +3256,46 @@ a.toggle-locale-btn {
             float: initial;
         }
         padding: 15px 15px;
+    }
+
+    .timeline {
+        .container-timeline {
+            width: 100%;
+            padding-left: 70px;
+            padding-right: 25px;
+
+            &::before {
+                left: 60px;
+                border: medium solid white;
+                border-width: 10px 10px 10px 0;
+                border-color: transparent white transparent transparent;
+            }
+
+            &:nth-child(odd)::after,
+            &:nth-child(even)::after {
+                left: 18px;
+            }
+            &:nth-child(odd) {
+                .content-timeline {
+                    h2 {
+                        text-align: left;
+                    }
+                }
+                .content-timeline::before {
+                    left: -50px;
+                }
+            }
+
+            &:nth-child(even) {
+                left: 0%;
+            }
+        }
+
+        &::before {
+            left: 31px;
+    
+            
+        }
     }
     
     .site-content .production-tabs ul.nav-tabs {
