--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -2833,13 +2833,13 @@ a.toggle-locale-btn {
         background-image: url('/img/business/production_flow_bg.jpg');
         background-repeat: no-repeat;
         background-size: cover;
-        background-position: right;
+        background-position: top left;
 
         .bg-img {
             background-image: url('/img/business/production_flow_bg.jpg');
             background-repeat: no-repeat;
             background-size: contain;
-            background-position: right;
+            background-position: top left;
             position: absolute;
             top: 0;
             left: 15px;
