--- a/resources/assets/sass/frontend/template/grapeking/index.scss
+++ b/resources/assets/sass/frontend/template/grapeking/index.scss
@@ -2131,6 +2131,50 @@ a.toggle-locale-btn {
     .about-content {
         margin-bottom: 50px;
 
+        .company-section {
+            margin-top: 80px;
+
+            &:last-child {
+                margin-bottom: 60px;
+            }
+            .info-image {
+                img.company-image {
+                    width: 100%;
+                }
+            }
+            .info-content {
+                display: flex;
+                align-items: center;
+
+                .info-box {
+                    width: 100%;
+                    padding: 20px;
+
+                    .label-section {
+                        width: 100%;
+                        display: flex;
+                        align-items: center;
+                        margin-bottom: 20px;
+                        .logo {
+                            width: 100px;
+                            img {
+                                width: 100%;
+                            }
+                        }
+                        .label {
+                            width: calc(100% - 100px);
+                            font-size: 20px;
+                            font-weight: 600;
+                            padding: 5px 30px;
+                        }
+                    }
+                    .content {
+                        font-size: 14px;
+                        line-height: 28px;
+                    }
+                }
+            }
+        }
         .material-list {
             .item {
                 display: inline-block;
